2008-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Send service stderr to amandad debug file,
	  Wait for service termination and send error message to server.

2008-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c: Set PROPERTY_BLOCK_SIZE with a G_TYPE_INT
			       Set PROPERTY_READ_BUFFER_SIZE with a G_TYPE_UINT

2008-01-22  Dustin J. Mitchell <dustin@zmanda.com>
	* man/Makefile.am man/xml-source/amcheckdump.8.xml: new manpage
	* server-src/amcheckdump.pl: fix usage message

2008-01-22  Dustin J. Mitchell <dustin@zmanda.com>
	* configure.in config/amanda/userid.m4: add --with-single-userid

2008-01-22  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/amglue/amglue.h perl/amglue/bigint.c: Include integer limits
	  for all amglue files where they are missing from glib headers

2008-01-22  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: condition installchecks on the selected
	  components

2008-01-22  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am Makefile.am: distribute
	  installcheck/Installcheck scripts, make sure enough parameters
	  are passed along to distcheck for it to succeed, and also clean
	  up properly after tests are run.

2008-01-22  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/dumpers.m4: eliminate strange warning when
	  --without-smbclient is given

2008-01-16  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: Require user to specify
	  CLOBBER_MY_CONFIG=OK when running installchecks

2008-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec: Don't set PKG_CONFIG_PATH.

2008-01-16  Jean-Louis Martineau <martineau@zmanda.com>
	* oldrecover-src/extract_list.c, client-src/sendbackup.c,
	  client-src/sendsize.c, client-src/selfcheck.c,
	  recover-src/extract_list.c, server-src/changer.c,
	  server-src/amflush.c, server-src/driverio.c,
	  common-src/pipespawn.c: Call safe_fd before exec*.
